--- a/index.html/index.html
+++ b/index.html/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <!--script link-->
-    <script src="/index.html/code.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
